--- a/writex.yaml
+++ b/writex.yaml
@@ -6,5 +6,5 @@ engine: xelatex
 document:
   author: Tim von Oldenburg
   date: \today
-  title: Research Plan
-  subtitle: Internet of Bikes and People (IOBAP)
+  title: "The sociality of everyday bicycling: random vélomobile formations-in-action"
+  subtitle: Research proposal
